tests/baselines/reference/accessorWithES5.errors.txt
tests/cases/conformance/classes/propertyMemberDeclarations/memberAccessorDeclarations/accessorWithES5.ts(8,9): error TS1050: A 'set' accessor must have a corresponding 'get' accessor.
tests/cases/conformance/classes/propertyMemberDeclarations/memberAccessorDeclarations/accessorWithES5.ts(17,9): error TS1050: A 'set' accessor must have a corresponding 'get' accessor.


==== tests/cases/conformance/classes/propertyMemberDeclarations/memberAccessorDeclarations/accessorWithES5.ts (2 errors) ====
    class C {
        get x() {
            return 1;
        }
    }
    
    class D {
        set x(v) {
            ~
!!! error TS1050: A 'set' accessor must have a corresponding 'get' accessor.
        }
    }
    
    var x = {
        get a() { return 1 }
    }
    
    var y = {
        set b(v) { }
            ~
!!! error TS1050: A 'set' accessor must have a corresponding 'get' accessor.
    }